[package]
name = "hrx"
description = "Rust implementation of the HRX plain text archive format"
repository = "https://github.com/nabijaczleweli/hrx.rs"
documentation = "https://rawcdn.githack.com/nabijaczleweli/hrx.rs/doc/hrx/index.html"
readme = "README.md"
keywords = ["archive", "plaintext"]
categories = ["command-line-utilities", "encoding"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.1"
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>"]


[dependencies]
linked-hash-map = "0.5"
lazysort = "0.2"
memchr = "=2.3.4"

[build-dependencies]
rustfmt = "0.10"
peg = "0.5"
